force-app/main/default/objects/Project__c/fields/CC_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_Email_Address__c</fullName>
    <label>CC Email Address</label>
    <type>TextArea</type>
</CustomField>