force-app/main/default/objects/Project__c/fields/CP_Manager__c.field-meta.xml
<CustomField>
    <fullName>CP_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects3</relationshipName>
    <type>Lookup</type>
</CustomField>