force-app/main/default/objects/Project__c/fields/E_Brochure_Link__c.field-meta.xml
<CustomField>
    <fullName>E_Brochure_Link__c</fullName>
    <label>E Brochure Link</label>
    <type>Url</type>
</CustomField>