force-app/main/default/objects/Project__c/fields/From_Address__c.field-meta.xml
<CustomField>
    <fullName>From_Address__c</fullName>
    <label>From Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>demo email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>