force-app/main/default/objects/Project__c/fields/HQ_Address__c.field-meta.xml
<CustomField>
    <fullName>HQ_Address__c</fullName>
    <label>HQ Address</label>
    <type>Address</type>
</CustomField>