force-app/main/default/objects/Project__c/fields/Management_Discount_Approval__c.field-meta.xml
<CustomField>
    <fullName>Management_Discount_Approval__c</fullName>
    <label>Management Discount Approval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>