force-app/main/default/objects/Project__c/fields/Pre_Sales_Head__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sales_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre Sales Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>