force-app/main/default/objects/Project__c/fields/Project_Logo_Link__c.field-meta.xml
<CustomField>
    <fullName>Project_Logo_Link__c</fullName>
    <label>Project Logo Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>