force-app/main/default/objects/Project__c/fields/Sales_Head_Discount_Approval__c.field-meta.xml
<CustomField>
    <fullName>Sales_Head_Discount_Approval__c</fullName>
    <label>Sales Head Discount Approval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>